# focus-desktop-app

./: .gitignore  Focus-Admin.bat  README.md  Start-Focus.bat  index.html  package-lock.json  package.json  tsconfig.electron.json
electron/: admin.ts  dns.ts  main.ts  preload.ts  storage.ts  tracker.ts
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dns.rs  lib.rs  main.rs  state.rs  tracker.rs
