[package]
name = "focus"
version = "0.1.0"
description = "Focus — block distractions and track your time"
authors = ["you"]
edition = "2021"

[lib]
name = "focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-dns = "0.9"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
